Flaresolverr/flaresolverr-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flaresolverr
  namespace: flaresolverr
spec:
  parentRefs:
    - name: gw-internal
      namespace: gateway
      sectionName: web-gw
  hostnames:
    - flaresolverr.huntrrose.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - name: flaresolverr
        namespace: flaresolverr
        port: 80
